<resources>
    <string name="app_name">Tengo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_home">Home</string>
    <string name="item_explore">Explore</string>
    <string name="item_transaction">Transaction</string>
    <string name="item_profile">Profile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="forgotpassword_underline"><u>Forgot Password?</u></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text_missed">You\'ve been missed, please enter your mobile number and your password</string>
    <string name="email_asterisk">Email*</string>
    <string name="enter_email">Enter your email address</string>
    <string name="password_asterisk">Password*</string>
    <string name="enter_password">Enter your password</string>
    <string name="login_noaccount">Don\'t have an account yet? </string>
    <string name="title_asterisk">Title*</string>
    <string name="description_asterisk">Description*</string>
    <string name="date_asterisk">Date*</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="wib">WIB</string>
    <string name="type_asterisk">Type*</string>
    <string name="capacity_asterisk">Capacity*</string>
    <string name="thumbnail_asterisk">Thumbnail*</string>
    <string name="make_event">Make Event</string>
    <string name="enter_title">Enter event title</string>
    <string name="enter_description">Enter event description</string>
    <string name="select_date">Select event date</string>
    <string name="enter_time">Time</string>
    <string name="choose_type">Choose event type</string>
    <string name="enter_capacity">Enter event capacity</string>
    <string name="select_thumbnail">Select event thumbnail</string>

    <!--ONBOARDING STRING-->
    <string name="onboarding_first_title">Chat With Awesome Creators</string>
    <string name="onboarding_first_subtitle">Meet a great creators from various profession? Only here is the place.</string>
    <string name="onboarding_second_title">Anytime Anywhere!</string>
    <string name="onboarding_second_subtitle">Are you statisfied just hearing the sound? like podcast? if you chat here, you can see each other!</string>

    <!--DUMMY ATTRIBUTES-->
</resources>